# talmudifier-rs

./: .gitignore  Cargo.toml  README.md  example_config.json  example_fonts.json  example_talmudifier.json  tectonic.sh  todo.md
.github/workflows/: build.yml
doc/: README_rs.md  changes.md  config.md  fonts.md  generate.py  getting_started.md  how.md  length.md  markdown.md  overview.md  template.md
example_config/: Cargo.toml
example_config/src/: main.rs
example_text/: center.md  left.md  right.md
examples/: example_daf.rs
src/: column.rs  column_position.rs  columns.rs  config.rs  daf.rs  error.rs  font.rs  font_family.rs  index.rs  length.rs  lib.rs  lorem.txt  main.rs  md.rs  page.rs  prelude.rs  serialized_font.rs  talmudifier.rs  tex_span.rs  typeset_table.rs  typesetter.rs  xdv.rs
src/_column/: builder.rs  column_type.rs
src/column/: builder.rs  column_type.rs  columns.rs  cosmic.rs  error.rs  input_column.rs  latex_command.rs  mod.rs  position.rs  style.rs  table.rs  tex.rs  tex_column.rs  width.rs  word.rs  word_position.rs
src/column_maker/: cosmic.rs  mod.rs
src/config/: daf.rs  font.rs  fonts.rs  mod.rs  raw_text.rs  source_text.rs  text_paths.rs
src/font/: cosmic_font.rs  cosmic_fonts.rs  default_fonts.rs  default_tex_fonts.rs  font_metrics.rs  font_paths.rs  fonts.rs  mod.rs  tex_font.rs  tex_fonts.rs
src/page/: font.rs  length.rs  margins.rs  mod.rs  paper_size.rs  serialized_font.rs  tables.rs  unit.rs
src/span/: mod.rs  position.rs  span_column.rs  word.rs
src/table/: column.rs  input_table.rs  maybe_span_column.rs  mod.rs  num_lines.rs  para_column.rs  position.rs  span_column.rs  width.rs
src/tex/: error.rs  length.rs  mod.rs  page.rs  table.rs  unit.rs
src/text/: mod.rs  raw_text.rs  source_text.rs
src/typesetter/: column.rs  error.rs  maybe_span_column.rs  mod.rs  para_column.rs  position.rs  span_column.rs  table.rs  width_column.rs
src/typesetter/span/: mod.rs  style.rs  word.rs
src/typesetter/table/: mod.rs  span_column.rs  text_column.rs  width_column.rs
src/word/: latex_command.rs  mod.rs  position.rs  style.rs
src/xetex/: mod.rs  pdf.rs  xdv.rs
talmudifier/src/: main.rs
test_text/: .gitignore  daf.tex  four_lines.xdv  minimal_daf.tex  one_line.xdv  paracol.tex  test.md
