[package]
name = "talmudifier"
version = "0.1.0"
edition = "2021"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "Convert markdown text into Talmud-like PDFs"

[features]
default = ["default-fonts", "ffi"]
ffi = []
default-fonts = []
clap = ["dep:clap"]

[dependencies]
cosmic-text = { version = "0.12.1", default-features = false, features = ["std", "fontconfig"] }
markdown = "1.0.0-alpha.22"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
clap = { version = "4.5.30", optional = true, features = ["derive", "string"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[target.'cfg(unix)'.dependencies]
pdf-extract = "0.8.0"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", branch = "master", default-features = false, features = ["geturl-curl"] }

[[bin]]
name = "talmudify"
required-features = ["clap"]

[[bin]]
name = "textest"
required-features = ["clap"]
