[package]
name = "talmudifier"
version = "0.1.0"
edition = "2021"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "Convert markdown text into Talmud-like PDFs"

[features]
default = ["default-fonts"]
default-fonts = []
clap = ["dep:clap"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.30", optional = true, features = ["derive", "string"] }
cosmic-text = { version = "0.12.1", default-features = false, features = ["std", "fontconfig"] }
embed-doc-image = "0.1.4"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.22"
pdf-extract = "0.8.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tectonic = { git = "https://github.com/tectonic-typesetting/tectonic.git", rev = "c2ae25ff1facd9e9cce31b48944b867773f709ec", default-features = false, features = ["geturl-reqwest"] }
thiserror = "2.0.11"

[[bin]]
name = "talmudify"
required-features = ["clap"]

[[bin]]
name = "textest"
required-features = ["clap"]

[[bin]]
name = "benchmark"
