[package]
name = "talmudifier"
version = "0.1.2"
edition = "2021"
authors = ["Esther Alter <subalterngames@gmail.com>"]
description = "Convert markdown text into Talmud-like PDFs"
readme = "README.md"
repository = "https://github.com/subalterngames/talmudifier-rs"
license = "MIT"
keywords = ["jewish", "tex", "typesetting", "pdf", "font"]
categories = ["command-line-interface", "multimedia", "value-formatting", "visualization"]


[features]
default = ["default-fonts"]
default-fonts = []
textest = ["clap"]
clap = ["dep:clap"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.30", optional = true, features = ["derive", "string"] }
cosmic-text = { version = "0.12.1", default-features = false, features = ["std", "fontconfig"] }
embed-doc-image = "0.1.4"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.22"
nom = "5.1.1"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tectonic = { version = "0.15.0", default-features = false, features = ["external-harfbuzz", "geturl-reqwest"] }
thiserror = "2.0.11"

[[bin]]
name = "talmudify"
required-features = ["clap"]

[[bin]]
name = "textest"
required-features = ["textest"]

[[bin]]
name = "benchmark"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "e2bb93a35f70851c2bfb60006f1f7659cd1637d1"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { triplet = "x64-osx" }
x86_64-unknown-linux-gnu = {triplet = "x64-linux" }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
